--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
 streamlit==1.5.0
-pandas
-plost
-pandas
-plotly
-streamlit
-yfinance
-pandas-datareader
-prophet
+pandas ==1.5.3
+plost ==0.2.5
+plotly ==5.18.0
+streamlit == 1.30
 
